// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Styles should prioritize disabled over error styles 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal-disabled);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

<div>
  <div
    class=" cui-field-disabled circuit-0"
  >
    <label
      class="circuit-1"
      for=":rk:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=":rl:"
        aria-invalid="true"
        class="circuit-5"
        disabled=""
        id=":rk:"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should prioritize disabled over warning styles 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal-disabled);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

<div>
  <div
    class=" cui-field-disabled circuit-0"
  >
    <label
      class="circuit-1"
      for=":rm:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=":rn:"
        class="circuit-5"
        disabled=""
        id=":rm:"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with a description when passed the validationHint prop 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

.circuit-6 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: block;
  margin-top: 4px;
  color: var(--cui-fg-subtle);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.cui-field-disabled .circuit-6 {
  color: var(--cui-fg-subtle-disabled);
}

<div>
  <div
    class=" circuit-0"
  >
    <label
      class="circuit-1"
      for=":r6:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=":r7:"
        class="circuit-5"
        id=":r6:"
        value=""
      />
    </div>
    <span
      class="circuit-6"
      id=":r7:"
    >
      Validation hint
    </span>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with a prefix when passed the prefix prop 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  position: absolute;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-6 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-left: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-6::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-6:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-6:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-6:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div>
  <div
    class=" circuit-0"
  >
    <label
      class="circuit-1"
      for=":r2:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <div
        class="circuit-5"
        style="width: 24px; height: 24px;"
      />
      <input
        aria-describedby=":r3:"
        class="circuit-6"
        id=":r2:"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with a suffix when passed the suffix prop 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-right: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

.circuit-6 {
  position: absolute;
  top: 0;
  right: 0;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
  -webkit-transition: right 120ms ease-in-out;
  transition: right 120ms ease-in-out;
}

<div>
  <div
    class=" circuit-0"
  >
    <label
      class="circuit-1"
      for=":r4:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=":r5:"
        class="circuit-5"
        id=":r4:"
        value=""
      />
      <div
        class="circuit-6"
        style="width: 24px; height: 24px;"
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with custom styles 1`] = `
.circuit-0 {
  border: 1px solid red;
}

.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  color: red;
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div>
  <div
    class="circuit-0"
  >
    <label
      class="circuit-1"
      for=":ro:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=":rp:"
        class="circuit-5"
        id=":ro:"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with default styles 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div>
  <div
    class=" circuit-0"
  >
    <label
      class="circuit-1"
      for=":r0:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=":r1:"
        class="circuit-5"
        id=":r0:"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with disabled styles when passed the disabled prop 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal-disabled);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

<div>
  <div
    class=" cui-field-disabled circuit-0"
  >
    <label
      class="circuit-1"
      for=":ri:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=":rj:"
        class="circuit-5"
        disabled=""
        id=":ri:"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with invalid styles when passed the invalid prop 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-danger);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:not(:focus)::-webkit-input-placeholder {
  color: var(--cui-fg-danger);
}

.circuit-5:not(:focus)::-moz-placeholder {
  color: var(--cui-fg-danger);
}

.circuit-5:not(:focus):-ms-input-placeholder {
  color: var(--cui-fg-danger);
}

.circuit-5:not(:focus)::placeholder {
  color: var(--cui-fg-danger);
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-danger-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-danger);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-danger-pressed);
}

<div>
  <div
    class=" circuit-0"
  >
    <label
      class="circuit-1"
      for=":ra:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=":rb:"
        aria-invalid="true"
        class="circuit-5"
        id=":ra:"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with readonly styles when passed the readOnly prop 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: var(--cui-bg-subtle-disabled);
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div>
  <div
    class=" circuit-0"
  >
    <label
      class="circuit-1"
      for=":rg:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=":rh:"
        class="circuit-5"
        id=":rg:"
        readonly=""
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with right aligned text 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  text-align: right;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div>
  <div
    class=" circuit-0"
  >
    <label
      class="circuit-1"
      for=":re:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=":rf:"
        class="circuit-5"
        id=":re:"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with valid styles when passed the showValid prop 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div>
  <div
    class=" circuit-0"
  >
    <label
      class="circuit-1"
      for=":rc:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=":rd:"
        class="circuit-5"
        id=":rc:"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`Input Styles should render with warning styles when passed the hasWarning prop 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-warning);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:not(:focus)::-webkit-input-placeholder {
  color: var(--cui-fg-warning);
}

.circuit-5:not(:focus)::-moz-placeholder {
  color: var(--cui-fg-warning);
}

.circuit-5:not(:focus):-ms-input-placeholder {
  color: var(--cui-fg-warning);
}

.circuit-5:not(:focus)::placeholder {
  color: var(--cui-fg-warning);
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-warning-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-warning);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-warning-pressed);
}

<div>
  <div
    class=" circuit-0"
  >
    <label
      class="circuit-1"
      for=":r8:"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Label
      </span>
    </label>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=":r9:"
        class="circuit-5"
        id=":r8:"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;
